--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="container">
         <h1>Hola estoy EN LA RAMA 1 DE GIT</h1>
         <h2>Segundo cambio en la rama 1 de git</h2>
-        
+        <h2>Prueba de subida</h2>
         <h2>Soy un titulo que viene de una rama</h2>
         <p>Estamos subiendo este repo a GitHub</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, laboriosam ab. Corrupti libero consequatur ullam dolor ut iure aspernatur numquam, repudiandae in autem modi deserunt ipsam, beatae, odio atque quisquam.</p>
